[gd_scene load_steps=13 format=3 uid="uid://bwpl3b47m1h8q"]

[ext_resource type="Script" uid="uid://bkrxuirr4wpoe" path="res://Scripts/menu_principal.gd" id="1_jn68a"]
[ext_resource type="PackedScene" uid="uid://c6vh7gkg27w0a" path="res://Escenas/parallax_backgroundMenu.tscn" id="1_u1tl3"]
[ext_resource type="Texture2D" uid="uid://dodyb017rjo6s" path="res://Sprites/global/cuadro_principal.png" id="3_bjyth"]
[ext_resource type="Texture2D" uid="uid://bqmec4vfmg3mu" path="res://Sprites/buttons/btn_jugar_principal.png" id="4_vcoqy"]
[ext_resource type="PackedScene" uid="uid://xwnqhcqrd6mc" path="res://Escenas/Global/btn_sounds.tscn" id="5_nrqk6"]
[ext_resource type="Texture2D" uid="uid://b4fkf3jss7us" path="res://Sprites/buttons/btn_salir_hover.png" id="6_0adot"]
[ext_resource type="Texture2D" uid="uid://cbsgw3yum2qos" path="res://Sprites/buttons/Boton_Salir.png" id="6_nxy1v"]
[ext_resource type="Script" uid="uid://d1kt63n1oatll" path="res://Scripts/Buttons/JugarButton.gd" id="6_u18oc"]
[ext_resource type="Texture2D" uid="uid://bgjwu474b2sm5" path="res://Sprites/buttons/btn_jugar_principal_hover.png" id="7_4bx0k"]
[ext_resource type="Texture2D" uid="uid://1j7ys5sxfofk" path="res://Sprites/buttons/LenguajeBoton.png" id="7_r82gn"]
[ext_resource type="Texture2D" uid="uid://bxp6e6bchd8wr" path="res://Sprites/buttons/botonPuntajes.png" id="11_1ahhs"]
[ext_resource type="Texture2D" uid="uid://r0dn38lkavun" path="res://Sprites/buttons/botonPuntajesHover.png" id="12_667qk"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchor_left = -0.00311765
anchor_top = -0.00662252
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.0249939
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jn68a")
metadata/_edit_use_anchors_ = true

[node name="ParallaxBackground" parent="." instance=ExtResource("1_u1tl3")]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 224.0
offset_right = 864.0
offset_bottom = 504.0
texture = ExtResource("3_bjyth")
expand_mode = 1

[node name="btn_sound" parent="." instance=ExtResource("5_nrqk6")]
layout_mode = 1
offset_left = 1167.0
offset_top = 121.0
offset_right = 1167.64
offset_bottom = 121.32

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1166.0
offset_top = 32.0
offset_right = 1232.0
offset_bottom = 93.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_nxy1v")
texture_hover = ExtResource("6_0adot")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton4" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1164.0
offset_top = 205.0
offset_right = 1230.0
offset_bottom = 266.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_r82gn")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 544.0
offset_right = 579.0
offset_bottom = 640.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_vcoqy")
texture_hover = ExtResource("7_4bx0k")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("6_u18oc")

[node name="TextureButton3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 544.0
offset_right = 1012.0
offset_bottom = 641.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("11_1ahhs")
texture_hover = ExtResource("12_667qk")

[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_texture_button_3_pressed"]
